--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
       - DISPLAY=${DISPLAY}
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
-      - /root/.de/chrome/chrome-profile:/home/chrome/user/.config/google-chrome
+      - /root/.de/chrome/chrome-profile:/home/chromeuser/.config/google-chrome
+      - /root/Downloads:/home/chromeuser/Downloads
     devices:
       - /dev/snd:/dev/snd
     deploy:
